Refactoring code + Sonarcloud